# kaggle-js-gpe

./: .gitignore  Cargo.toml  config.toml  jane_street_gpe_spec.md
src/: config.rs  data_loader.rs  error.rs  feature_engineering.rs  gpe.rs  lib.rs  main.rs  metrics.rs
src/models/: gbdt.rs  lightgbm.rs  mod.rs  traits.rs  xgboost.rs
