[package]
name = "jane_street_gpe"
version = "0.1.0"
edition = "2021"

[dependencies]
augurs = { version = "0.5", features = ["full"] }
polars = { version = "0.44.2", features = ["regex","lazy", "temporal", "rolling_window", "parquet", "is_in", "polars-io"] }
thiserror = "1.0"
anyhow = "1.0"
ndarray = "0.15"
geometric-entropy = { git = "https://github.com/yourbuddyconner/geometric-entropy-estimation", branch = "main" }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
gbdt = "0.1"
tracing = "0.1"
tracing-subscriber = "0.3"
glob = "0.3"